--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,9 +9,12 @@
     <string name="registrar">Não possui conta?</string>
     <string name="recuperarSenha">Esqueceu a senha?</string>
     
-    <!-- Screen register -->
+    <!-- Screen registerFornecedor -->
     <string name="name">Nome</string>
     <string name="cnpj">Cnpj</string>
     <string name="razaoSocial">Razão Social</string>
-    
+
+    <!-- Screen registerUser -->
+    <string name="register">Registrar</string>
+    <string name="goLogin">Já possui conta?</string>
 </resources>
